# slop-guard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  domain.rs  ingest.rs  lib.rs  main.rs
src/analyzers/: mod.rs
src/features/: mod.rs
src/github/: client.rs  mod.rs  models.rs  queries.rs
src/github/client/: tests.rs
src/github/queries/: account_lookup.graphql  pull_request_commits_page.graphql  pull_request_details.graphql  search_authored_pull_requests.graphql
src/scoring/: mod.rs
src/store/: mod.rs  queries.rs  schema.rs  test_queries.rs
src/store/sql/accounts/: find_by_username.sql  upsert.sql
src/store/sql/artifacts/: load_pull_requests_for_account_window.sql  upsert.sql
src/store/sql/commits/: delete_for_artifact.sql  load_for_artifact.sql  upsert.sql
src/store/sql/repositories/: upsert.sql
src/store/sql/schema/: 001_create_accounts.sql  002_create_repositories.sql  003_create_artifacts.sql  004_create_commits.sql  005_create_sync_runs.sql  006_idx_accounts_username.sql  007_idx_repositories_full_name.sql  008_idx_artifacts_account_created_at.sql  009_idx_commits_artifact_sha.sql  010_idx_sync_runs_account_started_at.sql
src/store/sql/sync_runs/: finish.sql  start.sql
src/store/sql/test/: count_artifacts.sql  count_commits.sql  count_commits_for_artifact.sql  count_repositories.sql  count_schema_tables.sql  select_artifact_storage_summary.sql  select_commit_sha_for_artifact.sql  select_latest_sync_run_outcome.sql  select_latest_sync_run_status.sql  select_sync_run_finished_at_by_id.sql  (+1 more)
